Bug 68794 - Spellcheck dialog title doesn't show the language
Summary: Spellcheck dialog title doesn't show the language
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Linguistic (show other bugs)
Version:
(earliest affected)
4.1.1.2 release
Hardware: Other All
: low minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.2.0 target:4.1.2
Keywords:
: 51585 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-08-31 16:59 UTC by João Mac-Cormick
Modified: 2013-10-07 09:44 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
The caption of the window does not show the language (22.77 KB, image/jpeg)
2013-08-31 16:59 UTC, João Mac-Cormick
Details

Note You need to log in before you can comment on or make changes to this bug.
Description João Mac-Cormick 2013-08-31 16:59:58 UTC
Created attachment 84975 [details]
The caption of the window does not show the language

Press F7. See the attached file.
Comment 1 Maxim Monastirsky 2013-09-01 18:38:31 UTC
Confirmed using LO 4.1.1.2 under Ubuntu 13.04 (64-bit). Bug 67801 also confirms on Windows 8 (with master). It happens only when spell-check starts with a message-box ("The spellcheck is complete." OR "Continue checking at beginning of document?")
Comment 2 Caolán McNamara 2013-09-02 09:59:57 UTC
The dialog hasn't processed any text so it doesn't know the language of the text yet. Traditionally we blanked out the placeholders in those circumstances, lets do that again.
Comment 3 Commit Notification 2013-09-02 11:30:46 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f42768fe0b60ecbbe9c68d775329bf28c0690131

Resolves: fdo#68794 blank placeholders when there is no known language yet



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2013-09-03 09:26:52 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=39213d044b40704be72fb2c3b35059b140bd2ef3&h=libreoffice-4-1

Resolves: fdo#68794 blank placeholders when there is no known language yet


It will be available in LibreOffice 4.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2013-10-07 09:44:01 UTC
*** Bug 51585 has been marked as a duplicate of this bug. ***