Resolves: fdo#68794 blank placeholders when there is no known language yet

Change-Id: I7f43144bd61ddc575d8b7094567433fdfd5ee291
(cherry picked from commit f42768fe0b60ecbbe9c68d775329bf28c0690131)
Reviewed-on: https://gerrit.libreoffice.org/5751
Reviewed-by: Fridrich Strba <fridrich@documentfoundation.org>
Tested-by: Fridrich Strba <fridrich@documentfoundation.org>